k8s_R2021-06-17.yaml
##  __  __ _       ___ ___
## |  \/  (_)_ __ |_ _/ _ \
## | |\/| | | '_ \ | | | | |
## | |  | | | | | || | |_| |
## |_|  |_|_|_| |_|___\___/
## 

## https://min.io/ + https://github.com/minio/minio + https://hub.docker.com/r/minio/minio
## https://github.com/Tob1asDocker/minio + https://hub.docker.com/r/tobi312/minio

## https://kubernetes.io/docs/reference/kubectl/cheatsheet/
## kubectl apply -f k8s.yaml

---

## Deployment/Pod:
## https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
## https://kubernetes.io/docs/concepts/workloads/pods/
## https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/
## https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
## https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-secret-by-providing-credentials-on-the-command-line

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      name: minio
      labels:
        app: minio
      annotations: {}
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: minio
        image: tobi312/minio:RELEASE.2021-06-17T00-10-46Z
        imagePullPolicy: Always
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 20
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - mountPath: /data
          name: minio-data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data

---

## Service:
## https://kubernetes.io/docs/concepts/services-networking/service/

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
  labels:
    app: minio
spec:
  ports:
    - name: "minio"
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio

---

## CertManager for Ingress (if use this then comment out "Secret for Ingress"):
## https://cert-manager.io/docs/ (https://github.com/jetstack/cert-manager)
## Installation needed: kubectl apply --validate=false -f https://github.com/jetstack/cert-manager/releases/download/v1.4.0/cert-manager.yaml

#apiVersion: cert-manager.io/v1
##kind: ClusterIssuer
#kind: Issuer
#metadata:
#  name: certmanager-ingress-nginx
#  namespace: default
#spec:
#  acme:
#    email: email@example.com
#    server: https://acme-v02.api.letsencrypt.org/directory
#    privateKeySecretRef:
#      name: ingress-tls-secret
#    solvers:
#    - http01:
#        ingress:
#          class: nginx

---

## https://kubernetes.io/docs/concepts/services-networking/ingress/
## https://kubernetes.github.io/ingress-nginx/ + https://github.com/kubernetes/ingress-nginx/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # CertManager:
    #cert-manager.io/cluster-issuer: certmanager-ingress-nginx
    #cert-manager.io/acme-challenge-type: http01
    ## oAuth2: https://kubernetes.github.io/ingress-nginx/examples/auth/oauth-external-auth/
    #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  tls:
  - hosts:
    - minio.example.net
    secretName: ingress-tls-secret
  rules:
  - host: minio.example.net
    http:
      paths:
      # gui
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
      # buckets for api access (examples)
      - path: /bucket1
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
      - path: /bucket2
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
